# RiceTypeImageDetection

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pre-commit-config.yaml  pyproject.toml
.dvc/: config
configs/data_loading/: data_loading.yaml
configs/logging/: logging.yaml
rice_type_image_detection/: command.py  infer.py  infer_onnx.py  infer_triton.py  infer_trt.py
rice_type_image_detection/modules/: infer_data_module.py  module.py  rice_type_dataset.py  vit_data_module.py
rice_type_image_detection/utilities/: labels_handler.py  model_getter.py
scripts/: convert2tensorrt.sh  download_artifacts.sh  download_dataset.sh  setup_triton_before_launch.sh  shut_down_triton.sh
triton/models/rice_type_image_detection/: config.pbtxt
